# my-blog

./: .gitignore  Cargo.toml  README.md  cats-ssg.dev.json  cats-ssg.json  content-index.html  features.json  index.html  index.md  main.css  package.json  pnpm-lock.yaml  shared.ts  syntaxes.packdump  syntaxes_supported.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  nginx.conf  squid.conf
.github/workflows/: binary-release.yml  deploy.yml
content/: index.md
content/adding-a-js-runtime/: index.md
content/creating-local-first-isolated-dev-enviroment/: index.md
content/designning-for-swe-agents/: index.md
content/experiments/: index.md
content/happy-birthday-Heud/: index.md
content/how-I-am-creating-my-blog/: index.md  meta.yml
content/my-design-process-for-a-navbar/: index.md
crates/ssg/: Cargo.toml
crates/ssg-generator-utils/: Cargo.toml  content-index.html
crates/ssg-generator-utils/src/: lib.rs  sitemap.rs
crates/ssg-generator-utils/syntaxes/: TypeScript.sublime-syntax  TypeScriptReact.sublime-syntax  syntaxes.packdump
crates/ssg-generator-utils/templates/: base.html  gtm-script.html
crates/ssg/src/: main.rs
crates/ssg/templates/: base.html  default-body.html  default-head.html  gtm-body.html
design/: client-side-navigation.md
pages/: index.md  meta.yml
pages/articles-coming-soon/: index.md
pages/designning-for-swe-agents/: index.md
pages/happy-birthday-Heud/: meta.yml
pages/how-I-am-creating-my-blog/: index.md  meta.yml
pages/i-had-a-adream/: index.md
pages/mermaid-test/: index.md
pages/tech/: modularization-and-complexity  you-may-not-need-a-query-hook.md
pages/tech/ai-swe/: index.md
pages/tech/modularization-and-complexity/: index.md
pages/tech/tutorials/katas/simple-form/: index.md
pages/tech/you-may-not-need-a-query-hook/: index.md
pages/understading-new-module-federation/: index.md
scripts/: build.mts
src/: main.rs
src/features/: client-side-navigation.ts  mermaid.ts
src/utils/: dom.ts  first-interaction.ts  observer.ts
templates/: base.html  navbar.html
