[package]
name = "ssg"
version = "0.1.0"
edition = "2024"

[dependencies]
ssg-generator-utils = { path = "../ssg-generator-utils" }
clap = { version = "4.5.43", features = ["derive"] }
glob = "0.3.2"
tailwindcss-oxide = { git = "https://github.com/tailwindlabs/tailwindcss.git", subdir = "crates/oxide" }
syntect = "5.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
